@@ -1,2 +1,2 @@
 Warning: expected I/O handle argument, received: $null at eval:1
-Warning: attempted an invalid index at nmesgs.sl:13
+Warning: attempted an invalid index: Index: -5, Size: 4 at nmesgs.sl:13
