@@ -1,0 +1,1 @@
+Warning: attempted an invalid index: Index: 4, Size: 3 at removeerr.sl:2
