@@ -1,0 +1,2 @@
+@a = @("a", "b", "c");
+removeAt(@a, 4);
